# SmartFarm_Ai_Copilot

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  render.yaml  vite.config.js
backend/: .dockerignore  .env.example  Dockerfile  Procfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  calendar.py  chat.py  economics.py  export.py  farm.py  feedback.py  irrigation.py  learning.py  market.py  predict.py  profile.py  rag.py  records.py  sensors.py  sessions.py  settings.py  stats.py  translation.py
backend/app/ml/: crop_model.py  train_models.py  yield_model.py
backend/app/rag/: embedder.py
backend/app/schemas/: models.py
backend/app/scripts/: init_db.py
backend/app/services/: calendar_service.py  chat_service.py  economics_service.py  export_service.py  farm_service.py  feedback_service.py  irrigation_service.py  learning_service.py  market_service.py  ml_service.py  profile_service.py  rag_service.py  records_service.py  sensor_service.py  translation_service.py
backend/app/utils/: db.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Sidebar.jsx  TopBar.jsx
frontend/src/pages/: Analytics.jsx  Calendar.jsx  Chat.jsx  Dashboard.jsx  Economics.jsx  Landing.jsx  Market.jsx  Sensors.jsx  Settings.jsx
frontend/src/services/: api.js
scripts/: start-backend.mjs
